RHCLOUD-11959 split API spec
