# internal/api/controllers/private/types.gen.go
@@ -1,0 +1,46 @@
+// Package private provides primitives to interact the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
+package private
+
+import (
+	externalRef0 "playbook-dispatcher/internal/api/controllers/public"
+)
+
+// RunCreated defines model for RunCreated.
+type RunCreated struct {
+
+	// status code of the request
+	Code int `json:"code"`
+
+	// Unique identifier of a Playbook run
+	Id *externalRef0.RunId `json:"id,omitempty"`
+}
+
+// RunInput defines model for RunInput.
+type RunInput struct {
+
+	// Identifier of the tenant
+	Account externalRef0.Account `json:"account"`
+
+	// Additional metadata about the Playbook run. Can be used for filtering purposes.
+	Labels *externalRef0.Labels `json:"labels,omitempty"`
+
+	// Identifier of the host to which a given Playbook is addressed
+	Recipient externalRef0.RunRecipient `json:"recipient"`
+
+	// Amount of seconds after which the run is considered failed due to timeout
+	Timeout *externalRef0.RunTimeout `json:"timeout,omitempty"`
+
+	// URL hosting the Playbook
+	Url externalRef0.Url `json:"url"`
+}
+
+// RunsCreated defines model for RunsCreated.
+type RunsCreated []RunCreated
+
+// ApiInternalRunsCreateJSONBody defines parameters for ApiInternalRunsCreate.
+type ApiInternalRunsCreateJSONBody []RunInput
+
+// ApiInternalRunsCreateRequestBody defines body for ApiInternalRunsCreate for application/json ContentType.
+type ApiInternalRunsCreateJSONRequestBody ApiInternalRunsCreateJSONBody
